apps/workload/logbeacon/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logbeacon-frontend
  namespace: logbeacon
spec:
  parentRefs:
    - name: logbeacon-gateway
      sectionName: https-root

  hostnames:
    - aws-logbeacon.iamridoydey.me

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: logbeacon-frontend-stable
          kind: Service
          port: 3000
          weight: 100

        - name: logbeacon-frontend-canary
          kind: Service
          port: 3000
          weight: 0

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: logbeacon-backend
  namespace: logbeacon

spec:
  parentRefs:
    - name: logbeacon-gateway
      sectionName: https

  hostnames:
    - api.aws-logbeacon.iamridoydey.me

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: logbeacon-backend-stable
          kind: Service
          port: 5000
          weight: 100

        - name: logbeacon-backend-canary
          kind: Service
          port: 5000
          weight: 0

---
 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts

spec:
  parentRefs:
    - name: logbeacon-gateway
      namespace: logbeacon
      sectionName: https

  hostnames:
    - "rollouts.aws-logbeacon.iamridoydey.me"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: workload-argo-rollouts-dashboard
          port: 3100
